--- a/less/items.less
+++ b/less/items.less
@@ -40,4 +40,26 @@
             text-align: right;
         }
     }
+
+    .sheet-header {
+        .talent-category {
+            flex: 0 0 275px;
+        }
+
+        .cost-input {
+            width: 50px;
+        }
+
+        .cost-label {
+            font-weight: bold;
+            text-transform: uppercase;
+            flex: 0 0 75px;
+        }
+
+        .cost-currency-label {
+            font-weight: bold;
+            text-transform: uppercase;
+            flex: 0 0 75px;
+        }
+    }
 }
